--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
+            android:name="gamedev.game.GameActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name="gamedev.game.SimpleGameActivity"
             android:label="@string/app_name" >
             <intent-filter>
